@@ -2,6 +2,7 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2017-02-24 	Richard Forth   Removed blocking code when PHP binary not found.
 2017-02-09 	Richard Forth   Removed some obsolete lines of code.
 2017-02-05 	Richard Forth   Moved all the github messaging into comments
 				at the top of the file, rather than in output.
